--------------------------
Changes in 1.8.4
 - Update lights and renderTargetTexture tests to work with Windows 10 (can't have so tiny Windows anymore).
 - Deprecate CMatrix4::transformBox as the result is no longer a boundingbox. Use CMatrix4::transformBoxEx instead (which has been available for a long time).
 - Fix CSceneCollisionManager::getPickedNodeBB which could sometimes miss collisions.
 - Add -U__STRICT_ANSI__ option to c::b project files to allow compiling with -std=c++11 and add an error when trying to compile with Irrlicht with __STRICT_ANSI__
 - Update libpng to 1.6.21
 - Update zlib to 1.2.8
 - Fix some compile warnings in aes which got handled as errors by some c++11 compilers.
 - Get rid of some misleading-indentation warnings in gcc6
 - Fix serialization of the InputReceiverEnabled flag in CCameraSceneNode
 - Fix pasting text from X11 applications to Irrlicht. Thanks @est31 for the patch.
 - Tests give now a warning when stabilizing screenshots failed. Aslo trying more often now (a hack as taking screenshots otherwise fails often in windowed mode on some systems).

--------------------------
Changes in 1.8.3 (13.9.2015)
 - Fix the fix for compiling on GCC5 (thanks to est31 for report and patch)

--------------------------
Changes in 1.8.2 (30.8.2015)

 - Add VS2013 project files
 - Fix compiling with IRR_LINUX_XCURSOR_
 - Fix compiling with NO_IRR_COMPILE_WITH_LIBJPEG_  (thx to anontypist for report and patch).
 - Fix compiling on GCC5 on MinGW (thanks to Slipxy for finding the bug and to osense for reporting it).
 - Fix loading of .X and .B3D models with non-normalized quaternion rotations (thanks to JLouisB for a test-model).
 - Fix compiling on Free BSD (thanks to leper for reporting and patch)
 - Fix bug with multiple SetPixelFormat calls. (reported and fixed by anontypist)
 - Fix bug related to memory release in PNG image loader. Thanks elephoenix for it.